--- a/freq.cabal
+++ b/freq.cabal
@@ -1,5 +1,5 @@
 name:                freq
-version:             0.1.0
+version:             0.1.1
 
 synopsis:            Frequencies of integers, and distributions of
 		     combinatorial statistics
@@ -26,5 +26,5 @@ source-repository head
   location:            git://github.com/akc/freq.git
 
 library
-  exposed-modules:     Math.Freq
+  exposed-modules:     Freq
   build-depends:       base >=4.5 && <5, containers >=0.4 && <0.6
